# memo-app

./: .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
.github/skills/robot-framework-tests/: SKILL.md
atest/: README.md  __init__.robot  memo_checklist.robot  memo_create.robot  memo_delete.robot  memo_detail.robot  memo_edit.robot  memo_list.robot  memo_storage.robot
atest/resources/: StorageLibrary.py  api_keywords.resource  browser.resource  browser_keywords.resource
memoproject/: asgi.py  settings.py  urls.py  wsgi.py
memos/: storage.py  urls.py  views.py
memos/static/memos/: style.css
memos/templates/: 404.html
memos/templates/memos/: base.html  create.html  delete.html  detail.html  edit.html  list.html
utest/: conftest.py  test_storage.py  test_views.py
